Updated backend services, added exception handling, and improved frontend dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 HELP.md
 target/
 .mvn/wrapper/maven-wrapper.jar
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.properties
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -31,3 +33,11 @@ build/
 
 ### VS Code ###
 .vscode/
+
+*.log
+logs/
+
+.DS_Store
+Thumbs.db
+
+/*.swp
