--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,16 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-mail</artifactId>
+		    <exclusions>
+		        <exclusion>
+		            <groupId>org.eclipse.angus</groupId>
+		            <artifactId>jakarta.mail</artifactId>
+		        </exclusion>
+		        <exclusion>
+		            <groupId>com.sun.mail</groupId>
+		            <artifactId>jakarta.mail</artifactId>
+		        </exclusion>
+		    </exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -45,6 +55,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>com.sun.mail</groupId>
+		    <artifactId>jakarta.mail</artifactId>
+		    <version>2.0.1</version>
 		</dependency>
 
 		<dependency>
