--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,22 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.mail.host=smtp.gmail.com 
-spring.mail.port=465
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
 spring.mail.username=23b01a12c6@svecw.edu.in
-spring.mail.password=
+spring.mail.password=gusx rhcv ebqg qisi
+spring.mail.protocol=smtp
+
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.ssl.enable=true 
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+ 
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.debug=true
+
+sun.net.inetaddr.ttl=0
 
 server.port=8083
