Change datasource and mail credentials
Updated database and mail configuration properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=BankTokenManagement
 
 spring.datasource.url=jdbc:mysql://localhost:3306/banktoken
 spring.datasource.username=springbootuser
-spring.datasource.password=mypass123
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update 
@@ -11,8 +11,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=23b01a12c6@svecw.edu.in
-spring.mail.password=gusx rhcv ebqg qisi
+spring.mail.username=your username
+spring.mail.password=password
 spring.mail.protocol=smtp
 
 spring.mail.properties.mail.smtp.auth=true
